# webchat

./: .gitignore  Makefile  README.md
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/api/: main.py
backend/src/api/v1/: routers.py
backend/src/api/v1/messages/: filters.py  handlers.py  schemas.py
backend/src/api/v1/messages/websockets/: messages.py
backend/src/application/: mediator.py
backend/src/application/commands/: base.py  messages.py
backend/src/application/events/: base.py  messages.py
backend/src/application/exceptions/: base.py  mediator.py  messages.py
backend/src/application/mediator/: base.py  event.py
backend/src/application/queries/: messages.py
backend/src/domain/entities/: base.py  messages.py
backend/src/domain/events/: base.py  messages.py
backend/src/domain/exceptions/: base.py  messages.py
backend/src/domain/value_objects/: base.py  messages.py
backend/src/infra/di/: containers.py
backend/src/infra/message_brokers/: base.py  kafka.py  lifespan.py
backend/src/infra/repositories/filters/: messages.py
backend/src/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
backend/src/infra/websocket/: managers.py
backend/src/settings/: config.py
backend/tests/: conftest.py  fixtures.py
backend/tests/api/: conftest.py
backend/tests/application/: test_messages.py
backend/tests/domain/entities/: test_messages.py
backend/tests/domain/values/: test_messages.py
deploy/docker-compose/: .env  app.yaml  kafka.yaml
deploy/k8s/app/: configmap.yaml  deployment.yaml  services.yaml
deploy/k8s/message-brokers/kafka/: configmap.yaml  deployment.yaml  services.yaml
deploy/k8s/message-brokers/zookeeper/: deployment.yaml  services.yaml
deploy/k8s/storages/mongo/: configmap.yaml  deployment.yaml  pvc.yaml
deploy/local/: .env  app.yaml  storages.yaml
