[tool.poetry]
name = "fastapi-chat-ddd"
version = "0.1.0"
description = ""
authors = ["Daniyar <srxd1710@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
motor = "^3.4.0"
uvicorn = { extras = ["all"], version = "^0.29.0" }
pytest = "^8.2.1"
faker = "^25.2.0"
pytest-asyncio = "^0.23.7"
punq = "^0.7.0"
pydantic-settings = "^2.3.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes = "*Test"
python_files = "tests.py test_*.py"
pythonpath = "src"
testpaths = "tests"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["src", ]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "migrations",
]
known_fastapi = ["fastapi"]
known_first_party = ["src"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
